--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="w-screen bg-gray-100">
+  <body class="antialiased w-screen bg-gray-100">
     <slot />
   </body>
 </html>
